modal alignment fix..?

--- a/src/App.css
+++ b/src/App.css
@@ -216,8 +216,6 @@ legend {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100vw;
-  height: 100vh;
   z-index: 100;
 }
 
